--- a/experience.html
+++ b/experience.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Personal Portfolio</title>
+    <title>Experience</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,10 +12,11 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutme.html">About</a></li>
-            <li><a href="experience.html">Experience</a></li>
-            <li><a href="#">Resume</a></li>
+            <li><a href="#">Experience</a></li>
+            <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </header>
+
 </body>
 </html>
