--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="aboutme.html">About</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="experience.html">Experience</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -22,7 +22,7 @@
             <h2>Hello, I'm <br><span>Annabelle Platt</span></h2>
             <h3>I'm a student at Olin College of Engineering, majoring in General Engineering with Robotics.
             I'm passionate about user experience design and environmental conservation. </h3>
-            <a href="portfolio.html" class="btn">View Portfolio</a>
+            <a href="experience.html" class="btn">View Experience</a>
         </div>
         <div class="pic">
             <img src="img/tree.jpg" alt="Annabelle Platt" style="float:right;width:100%;height:auto;">
