--- a/portfolio.html
+++ b/portfolio.html
@@ -24,24 +24,36 @@
         </div>
         <div class="portfolioRow">
             <div class="portfolioColumn">
-                <img src="../img/calanus.jpg" alt="Calanus finmarchicus" style="width: 100%">
-                <img src="../img/adcarhighquality.png" alt="RC car with router and NVIDIA processor" style="width: 100%">
-                <img src="../img/tshirt.jpg" alt="Handmade tshirt from an upcycled bedsheet" style="width: 100%">
+                <div class="project">
+                    <img src="img/calanus.jpg" alt="Calanus finmarchicus">
+                    <div class="project_text">
+                        <h4>A project I did</h4>
+                        <p>Project description</p>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="img/adcarhighquality.png" alt="RC car with router and NVIDIA processor">
+                    <div class="project_text">
+                        <h4>Another project I did</h4>
+                        <p>Project description2</p>
+                    </div>
+                </div>
+                <img src="img/tshirt.jpg" alt="Handmade tshirt from an upcycled bedsheet">
             </div>
             <div class="portfolioColumn">
-                <img src="../img/onshape.png" alt="Onshape logo" style="width: 100%">
-                <img src="../img/breadboard.jpg" alt="Circuit built by Annabelle on a breadboard" style="width: 100%">
-                <img src="../img/cloudberryjam.png" alt="Logo of a cloudberry against a cloud" style="width: 100%">
+                <img src="img/onshape.png" alt="Onshape logo">
+                <img src="img/breadboard.jpg" alt="Circuit built by Annabelle on a breadboard">
+                <img src="img/cloudberryjam.png" alt="Logo of a cloudberry against a cloud">
             </div>
             <div class="portfolioColumn">
-                <img src="../img/team_photo.jpg" alt="Annabelle's robotics teams seniors and robot senior year of high school" style="width: 100%">
-                <img src="../img/archerfish.jpg" alt="Play experience for 4th graders based on the archerfish" style="width: 100%">
+                <img src="img/team_photo.jpg" alt="Annabelle's robotics teams seniors and robot senior year of high school">
+                <img src="img/archerfish.jpg" alt="Play experience for 4th graders based on the archerfish">
             </div>
             <div class="portfolioColumn">
-                <img src="../img/snotbot.jpg" alt="Annabelle with Snotbot team" style="width: 100%">
-                <img src="../img/funrobo.jpg" alt="Motor lab setup in Fundamentals of Robotics class" style="width: 100%">
-                <img src="../img/birthcontrol.jpg" alt="Handmade pouch for carrying birth control pills" style="width: 100%">
-                <img src="../img/IRWA%20DOCK.JPG" alt="Dock at Ipswich River Watershed Assocation" style="width: 100%">
+                <img src="img/snotbot.jpg" alt="Annabelle with Snotbot team">
+                <img src="img/funrobo.jpg" alt="Motor lab setup in Fundamentals of Robotics class">
+                <img src="img/birthcontrol.jpg" alt="Handmade pouch for carrying birth control pills">
+                <img src="img/IRWA%20DOCK.JPG" alt="Dock at Ipswich River Watershed Assocation">
             </div>
         </div>
     </section>
