--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="experience.html">Experience</a></li>
-            <li><a href="resume.html">Resume</a></li>
+            <li><a href="Annabelle's%20Resume.pdf">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </header>
@@ -22,7 +22,7 @@
             <h2>About Me</h2>
         </div>
         <div class="content">
-            <div class="aboutpic w45">
+            <div class="descriptionpic w45">
                 <img src="img/sunny-hat.JPG" alt="Annabelle in hat" class="img"/>
             </div>
             <div class="contentBx w55">
