--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="aboutme.html">About</a></li>
             <li><a href="experience.html">Experience</a></li>
-            <li><a href="resume.html">Resume</a></li>
+            <li><a href="Annabelle's%20Resume.pdf">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </header>
