Edit experience page and about page

--- a/experience.html
+++ b/experience.html
@@ -23,9 +23,28 @@
             </div>
             <div class="project_content">
                 <div class="project_pic">
-                    <img src="img/calanus.jpg" alt="Calanus finmarchicus" class="img"/>
+                    <img src="img/onshape.png" alt="Onshape logo" class="img"/>
                 </div>
                 <div class="project_description_left">
+                    <h3>UX Design Internship at Onshape</h3><br>
+                    <p>This past summer I was lucky enough to work remotely as a user experience
+                        designer at <a href="https://www.onshape.com/">Onshape</a>. I worked on improvement
+                        requests, analyzing relevant support tickets to determine
+                        the most common use cases for that feature. I then used Figma to create mockups
+                        and test them out, both internally on other Onshape employees or interns, and externally
+                        on real Onshape users. Based on the test results, I would modify the mockups until
+                        I found the best solution. Several of the changes I worked on are currently either
+                        in the Onshape product or in development to go out in future releases. <br><br>
+                        At this internship I gained an extensive knowledge of Figma and learned how to conduct
+                        user interviews and handle them professionally even when they didn't go smoothly.
+                        I also learned about what is really important when designing user experience. For more on this,
+                        see my <a href="https://www.linkedin.com/pulse/users-experience-how-onshape-does-ux-right-annabelle-platt/">blog post</a>
+                        about my experience and my views on UX in general.
+
+                </div>
+            </div>
+            <div class="project_content">
+                <div class="project_description_right">
                     <h3>Building a Plankton Identification Algorithm in MATLAB</h3><br>
                     <p>This is probably my favorite project I've ever done. As a final project for the
                     linear algebra unit in the course Quantitative Engineering Analysis, <b>I built an
@@ -37,14 +56,39 @@
                     followed by PCA to classify the plankton. <b>For full details on this, see my
                     <a href="QEA%20Project%201%20Report.pdf">report</a></b></p>
                 </div>
+                <div class="project_pic">
+                    <img src="img/calanus.jpg" alt="Calanus finmarchicus" class="img"/>
+                </div>
+            </div>
+            <div class="project_content">
+                <div class="project_pic">
+                    <img src="img/archerfish.jpg" alt="Archerfish slingshot turret made of cardboard" class="img"/>
+                </div>
+                <div class="project_description_left">
+                    <h3>Designing a Play Experience for 4th Graders</h3><br>
+                    <p>My final project for the course Design Nature was to build a play experience for
+                        4th graders inspired by an animal. My group was assigned the archerfish, which
+                        hunt by squirting water from their mouths to knock bugs off branches. <b>Team work and effective
+                        communication were absolutely critical for this project, as over the course of seven weeks,
+                        my group designed, prototyped, and built an experience.</b> In our design, 4th graders would
+                        play as an archerfish trapped in an aquarium that needed to shoot "water" (in the form of
+                        hand-sewn beanbags) to knock down the keys and escape. <br><br>The archerfish that we built
+                        (shown in the image to the left) was a turreted slingshot. The turret allowed rotation both side
+                        to side and up and down. Requiring this to be done at the same time as operating the slingshot
+                        was a design choice to necessitate teamwork. <b>During our final exam period, real 4th graders
+                        came to test out our experience.</b> Seeing them successfully navigate the experience and walk away
+                        proclaiming that "That was fun!" was an incredibly gratifying experience that brought home
+                        how far we had come from scribbled designs on a white board to a reality that 4th graders would enjoy.
+                    </p>
+                </div>
             </div>
             <div class="project_content">
                 <div class="project_description_right">
-                    <h3>Building a Play Experience for 4th Graders</h3>
+                    <h3>FIRST Robotics Competition Team 5459</h3>
                     <p></p>
                 </div>
                 <div class="project_pic">
-                    <img src="img/archerfish.jpg" alt="Annabelle in hat" class="img"/>
+                    <img src="img/team_photo.jpg" alt="Annabelle with FRC team seniors and robot" class="img"/>
                 </div>
             </div>
         </section>
