--- a/aboutme.html
+++ b/aboutme.html
@@ -29,12 +29,7 @@
                 <h3>Hi, I'm Annabelle. </h3>
                 <p> I'm a General Engineering with Robotics major at Olin College of Engineering. I love robotics because
                 it's the intersection of so many different disciplines. I'm especially passionate about User Experience design,
-                and most recently completed a UX internship at <a href="https://www.onshape.com/">Onshape.</a> <br><br> Lorem ipsum dolor
-                sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum</p>
+                and most recently completed a UX internship at <a href="https://www.onshape.com/">Onshape.</a></p>
             </div>
         </div>
     </section>
