Add robotics to experience page

--- a/experience.html
+++ b/experience.html
@@ -69,23 +69,34 @@
                     <p>My final project for the course Design Nature was to build a play experience for
                         4th graders inspired by an animal. My group was assigned the archerfish, which
                         hunt by squirting water from their mouths to knock bugs off branches. <b>Team work and effective
-                        communication were absolutely critical for this project, as over the course of seven weeks,
+                        communication were critical for this project, as over the course of seven weeks,
                         my group designed, prototyped, and built an experience.</b> In our design, 4th graders would
                         play as an archerfish trapped in an aquarium that needed to shoot "water" (in the form of
-                        hand-sewn beanbags) to knock down the keys and escape. <br><br>The archerfish that we built
-                        (shown in the image to the left) was a turreted slingshot. The turret allowed rotation both side
-                        to side and up and down. Requiring this to be done at the same time as operating the slingshot
-                        was a design choice to necessitate teamwork. <b>During our final exam period, real 4th graders
-                        came to test out our experience.</b> Seeing them successfully navigate the experience and walk away
-                        proclaiming that "That was fun!" was an incredibly gratifying experience that brought home
-                        how far we had come from scribbled designs on a white board to a reality that 4th graders would enjoy.
+                        hand-sewn beanbags) to knock down the keys and escape. <br><br><b>During our final exam period,
+                        real 4th graders came to test out our experience.</b> Seeing them successfully navigate the
+                        experience and walk away proclaiming that "That was fun!" was an incredibly gratifying experience
+                        that brought home how far we had come from scribbled designs on a white board to a reality that
+                        4th graders would enjoy.
                     </p>
                 </div>
             </div>
             <div class="project_content">
                 <div class="project_description_right">
                     <h3>FIRST Robotics Competition Team 5459</h3>
-                    <p></p>
+                    <p>From 8th grade through my senior year of high school, I was a committed member of
+                    my high school's FIRST Robotics Competition team. <b>I was the head of the mechanical
+                        department from my sophomore year through my senior year.</b> Every year in January, FIRST
+                    (a nonprofit which stands for "For Inspiration and Recognition of Science and Technology)
+                    released a challenge to teams, which we had six weeks to build a robot to complete.
+                    We would then attend competitions where our robot would play against other robots.<br> <br>
+                    It's difficult to put into words exactly what a formative experience this was for me. This
+                    was inspired me to become an engineer. <b>It taught me how to fail over and over again and still
+                    pick myself up and try again.</b> It taught me how to work on a team, how to delegate as a
+                    department lead, how to communicate my designs to others and listen to other's designs. It
+                    taught me to choose designs based on their legitimacy, not my emotional attachment to them. It
+                    taught me where my weaknesses are, and how to work on them. Many of them I am working on to this day.
+                    I would not be where I am today without this team. They are still going strong today; their website
+                    can be found <a href="https://www.ipswich5459.com/">here</a> </p>
                 </div>
                 <div class="project_pic">
                     <img src="img/team_photo.jpg" alt="Annabelle with FRC team seniors and robot" class="img"/>
