Add contact page content

--- a/contact.html
+++ b/contact.html
@@ -17,5 +17,23 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </header>
+    <section class="contact">
+        <div class="heading">
+            <br><h2>Contact Me</h2><br>
+        </div>
+        <div class="content">
+            <br><p><b>Email:</b> aplatt (at) olin.edu<br>
+            <b>Phone:</b> (978) 412 5912</p><br>
+        </div>
+        <div class="heading">
+            <br><h2>Find me online</h2>
+        </div>
+        <div class="contactSocial">
+            <a href="https://www.linkedin.com/in/annabelle-platt-92b4a0178/">
+                <img src="img/linkedin.png" alt="LinkedIn logo"></a>
+            <a href="https://github.com/19platta">
+                <img src="img/github.png" alt="Github logo"></a>
+        </div>
+    </section>
 </body>
 </html>
