--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="img/adcarhighquality.png" alt="RC car with router and NVIDIA processor">
+                    <img src="img/adcar.png" alt="RC car with router and NVIDIA processor">
                     <div class="project_text">
                         <h4>Another project I did</h4>
                         <p>Project description2</p>
