--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <section class="banner">
         <div class="textBx">
             <h2>Hello, I'm <br><span>Annabelle Platt</span></h2>
-            <h3>I'm a student at Olin College of Engineering, majoring in General Engineering with Robotics.
-            I'm passionate about user experience design and environmental conservation. </h3>
+            <h3>I'm a student at Olin College of Engineering, majoring in Engineering: Computing.
+            I'm passionate about code, user experience design, and ethical engineering. </h3>
             <a href="experience.html" class="btn">View Experience</a>
         </div>
         <div class="pic">
