--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Personal Portfolio</title>
+    <title>Annabelle's Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,16 +17,30 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </header>
+    <div class="background-spline">
+        <svg width="100%" height="auto" viewBox="0 0 1440 987" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_11:14)">
+                <path d="M1 74.5C56 379 90 533 825 533C1196 533 1354 667 1440 807" stroke="black" stroke-width="2"/>
+                <path d="M81.5 74C95.5 368 162 536 898 536C1286 536 1352 603 1446 701" stroke="black" stroke-width="2"/>
+                <path d="M-2 321C44 405 92.0001 535 824 535C1280 535 1404 861 1442 959" stroke="black" stroke-width="2"/>
+            </g>
+            <defs>
+                <clipPath id="clip0_11:14">
+                    <rect width="1440" height="987" fill="white"/>
+                </clipPath>
+            </defs>
+        </svg>
+    </div>
     <section class="banner">
+        <div class="pic">
+            <img src="img/Mask%20Group.png" alt="Annabelle Platt" style="float:right;width:90%;height:auto;">
+        </div>
         <div class="textBx">
             <h2>Hello, I'm <br><span>Annabelle Platt</span></h2>
-            <h3>I'm a student at Olin College of Engineering, majoring in General Engineering with Robotics.
-            I'm passionate about user experience design and environmental conservation. </h3>
-            <a href="experience.html" class="btn">View Experience</a>
+            <h3>I'm a student at Olin College of Engineering, majoring in Engineering: Computing.
+                I'm passionate about code, user experience design, and ethical engineering.  </h3>
         </div>
-        <div class="pic">
-            <img src="img/tree.jpg" alt="Annabelle Platt" style="float:right;width:100%;height:auto;">
-        </div>
+
     </section>
 </body>
 </html>
