--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
         <div class="toggle"></div>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="aboutme.html">About</a></li>
             <li><a href="experience.html">Experience</a></li>
-            <li><a href="Annabelle's%20Resume.pdf">Resume</a></li>
+            <li><a href="docs/Annabelle_Resume_Fall_2021.pdf">Resume</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="https://github.com/19platta">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/annabelle-platt-92b4a0178/">LinkedIn</a></li>
         </ul>
     </header>
     <div class="background-spline">
@@ -37,9 +38,9 @@
         <section class="spacer"></section>
         <svg width="100%" height="auto" viewBox="0 0 1440 965" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_16:31)">
-                <path d="M-2 771C20 681 90 432 825 432C1196 432 1354 298 1440 158" stroke="black" stroke-width="3"/>
-                <path d="M-2 963C70 633 224 429 898 429C1286 429 1352 362 1446 264" stroke="black" stroke-width="3"/>
-                <path d="M-2 644C44 560 92.0001 430 824 430C1280 430 1404 104 1442 6" stroke="black" stroke-width="3"/>
+                <path d="M-2 761C88 549 158 419 825 432C1195.93 439.23 1354 298 1440 158" stroke="black" stroke-width="3"/>
+                <path d="M-2 891C102 585 202 429 898 429C1286 429 1352 362 1446 264" stroke="black" stroke-width="3"/>
+                <path d="M-2 625C154 401 288 430 824 430C1280 430 1404 104 1442 6" stroke="black" stroke-width="3"/>
             </g>
             <defs>
                 <clipPath id="clip0_16:31">
@@ -47,6 +48,7 @@
                 </clipPath>
             </defs>
         </svg>
+        <section class="spacer"></section>
 
     </div>
     <section class="banner" style="padding-top: 140px">
@@ -57,42 +59,120 @@
             <h2>Hello, I'm <br><span>Annabelle Platt</span></h2>
             <h3>I'm a student at Olin College of Engineering, majoring in Engineering: Computing.
                 I'm passionate about code, user experience design, and ethical engineering.  </h3>
+            <a href="docs/Annabelle_Resume_Fall_2021.pdf" class="btn">View Resume</a>
         </div>
-
     </section>
+
     <section class="experience">
-        <div class="heading" >
-            <h2><span>Work Experience</span></h2><br>
+        <div class="row top-buffer">
+            <div class="col" >
+                <h2><span>Work Experience</span></h2><br>
+            </div>
         </div>
-        <div class="row row-buffer">
+        <div class="row bottom-buffer">
             <div class="col-9">
-                <h3 id="Duro">Duro Labs</h3>
-                <p>I am currently a user experience consultant at <a href="durolabs.co">Duro Labs</a>,
+                <h3 id="Duro"><b>Duro Labs</b></h3>
+                <p>I am currently a user experience consultant at <a href="https://www.durolabs.co/">Duro Labs</a>,
                     a cloud-based Product Lifecycle Management company.</p>
                 <p>I design, mockup, and user-test new features and feature improvements.
                     My work is primarily done in Sketch, using Sketch Cloud
                     for revision control. I also work with the developers as the feature is being implemented to
-                    resolve any UX questions that come up and to manually QA the feature once finished. Duro uses an agile development cycle of
-                    two week sprints, so I am comfortable working in an agile environment.</p>
-                <p>In addition to all this, I do graphic design and icon design to ensure
+                    resolve any UX questions that come up and to manually QA the feature once finished.
+                    In addition to all this, I do graphic design and icon design to ensure
                     a cohesive, professional look across the product.</p>
             </div>
             <div class="col project-pic align-self-center">
-                <img src="img/duro_logo.jpg" alt="Duro Labs logo" width="85%">
+                <img src="img/duro_logo.jpg" alt="Duro Labs logo" width="75%">
             </div>
         </div>
-        <div class="row row-buffer">
-            <div class="col-9">
-                <h3 id="Onshape">Onshape</h3>
+        <div class="row bottom-buffer">
+            <div class="col-9 order-last">
+                <h3 id="Onshape"><b>Onshape</b></h3>
                 <p>Onshape is a cloud-base CAD software changing the way engineers do CAD. I worked at
-                Onshape for the summers of 2020 and 2021. </p>
-                <p>During my first summer at Onshape I worked as a user experience design intern. </p>
+                    Onshape for the summers of 2020 and 2021, first as a user experience intern, then as a software
+                    engineering intern. Both my designs and my code are currently in the Onshape product.
+                </p>
+                <p>During my first summer at Onshape I worked as a user experience design intern. I identified key elements
+                    from user feature requests, then used Figma to create mockups and test them out on both other Onshape
+                    employees and real Onshape users. Based on the test results and feedback from design reviews, I
+                    iterated on the mockups until I found the best solution. I wrote an article about my experience and my
+                    views on UX design which can be found
+                    <a href="https://www.linkedin.com/pulse/users-experience-how-onshape-does-ux-right-annabelle-platt/">here</a>.
+                </p>
                 <p>During my second summer at Onshape I worked as a software engineering intern on the
-                data management team. I worked with Java, HTML, CSS, and Typescript to fix bugs and implement
-                new features.</p>
+                    data management team. I worked with Java, HTML, CSS, and Typescript to fix bugs and implement
+                    new features. I learned to navigate and debug in a large code base, submit and contribute to code reviews,
+                    and work with Git in a professional
+                    environment.
+                </p>
             </div>
             <div class="col project-pic align-self-center">
-                <img src="img/onshape.png" alt="Onshape logo">
+                <img src="img/onshape.png" alt="Onshape logo" width="80%">
+            </div>
+        </div>
+        <div class="row bottom-buffer">
+            <div class="col-9">
+                <h3 id="IRWA"><b>Ipswich River Watershed Association</b></h3>
+                <p>Ipswich River Watershed Association is an organization that seeks to protect the Ipswich River
+                    through legislation, conservation, and education.</p>
+                <p>I worked at IRWA during the summer of 2019 as an education apprentice. During my time there
+                    I worked with summer camps and educational groups, leading paddles on the Ipswich River
+                    and teaching about water conservation. I also visited local farmer's markets and attended
+                    other outreach events to teach children and adults about the river, where their water comes
+                    from, the importance of conserving it, and the dangers of stormwater. In my spare time,
+                    I worked on developing the organization’s new website and updating resources about town water
+                    systems to make water quality information more accessible to the public.
+                </p>
+            </div>
+            <div class="col project-pic align-self-center">
+                <img src="img/paddle.jpg" alt="Annabelle about to lead a paddle" width="100%">
+            </div>
+        </div>
+        <div class="row bottom-buffer">
+            <div class="col-8 order-last">
+                <h3 id="ADI"><b>Analog Devices</b></h3>
+                <p>During the summer of 2018 I worked as a robotics intern at Analog Devices,
+                    building RC cars to use as testbeds for developing autonomous vehicle sensors.
+                    This was my first big exposure to deciphering documentation and applying it to
+                    my own project. My job was primarily in adjusting the hardware and electrical
+                    systems to optimize the car for office testing. I designed circuits to integrate the components
+                    and CADed the structural housing. I also wrote Python scripts to interact with the
+                    Robot Operating System (ROS) and learned to develop in a Unix system.
+                </p>
+            </div>
+            <div class="col-3 project-pic align-self-center">
+                <img src="img/adcar.png" alt="An RC car from above" width="100%">
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row bottom-buffer top-buffer">
+                <div class="col offset-9 text-right" >
+                    <h2><span>Projects</span></h2><br>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4 project-pic">
+                    <a href="https://github.com/19platta/misguided-the-game">
+                        <img src="img/misguided.png" alt="A pixel art book with the word Misguided over it" width="100%">
+                        <h3 class="top-buffer"><b>Misguided: The Game</b></h3>
+                    </a>
+                    <p>An interactive, story-based game, built from scratch in Python.</p>
+                </div>
+                <div class="col-4 project-pic">
+                    <a href="docs/QEA%20Project%201%20Report.pdf">
+                        <img src="img/calanus.jpg" alt="Calanus finmarchicus" width="100%">
+                        <h3><b>Plankton Identification</b></h3>
+                    </a>
+                    <p>An algorithm that uses PCA to identify plankton species.
+                    </p>
+                </div>
+                <div class="col-4 project-pic">
+                    <img src="img/archerfish.jpg" alt="Children playing with a toy fish turret" width="100%">
+                    <h3><b>Archerfish Play Experience</b></h3>
+                    <p>A play experience based on the archerfish, designed for and tested by 4th graders</p>
+                </div>
             </div>
         </div>
     </section>
