--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         <div class="toggle"></div>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="experience.html">Experience</a></li>
             <li><a href="docs/Annabelle_Resume_Fall_2021.pdf">Resume</a></li>
-            <li><a href="contact.html">Contact</a></li>
             <li><a href="https://github.com/19platta">Github</a></li>
             <li><a href="https://www.linkedin.com/in/annabelle-platt-92b4a0178/">LinkedIn</a></li>
         </ul>
@@ -35,7 +33,7 @@
                 </clipPath>
             </defs>
         </svg>
-        <section class="spacer"></section>
+        <section style="height: 620px"></section>
         <svg width="100%" height="auto" viewBox="0 0 1440 965" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_16:31)">
                 <path d="M-2 761C88 549 158 419 825 432C1195.93 439.23 1354 298 1440 158" stroke="black" stroke-width="3"/>
@@ -48,7 +46,22 @@
                 </clipPath>
             </defs>
         </svg>
-        <section class="spacer"></section>
+        <section style="height: 0"></section>
+        <svg width="100%" height="auto" viewBox="0 0 1440 987" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_22:2)">
+                <path d="M-4 203C48 329 90 533 825 533C1196 533 1354 667 1440 807" stroke="black" stroke-width="3"/>
+                <path d="M2 33C28 275 154 536 898 536C1286 536 1352 603 1446 701" stroke="black" stroke-width="3"/>
+                <path d="M-2 321C44 405 92.0001 535 824 535C1280 535 1404 861 1442 959" stroke="black" stroke-width="3"/>
+            </g>
+            <defs>
+                <clipPath id="clip0_22:2">
+                    <rect width="1440" height="987" fill="white"/>
+                </clipPath>
+            </defs>
+        </svg>
+        <footer>
+            <p>Website designed and built by Annabelle Platt, &copy 2021</p>
+        </footer>
 
     </div>
     <section class="banner" style="padding-top: 140px">
@@ -146,7 +159,7 @@
         </div>
     </section>
     <section>
-        <div class="container">
+        <div class="container top-buffer">
             <div class="row bottom-buffer top-buffer">
                 <div class="col offset-9 text-right" >
                     <h2><span>Projects</span></h2><br>
@@ -169,9 +182,38 @@
                     </p>
                 </div>
                 <div class="col-4 project-pic">
-                    <img src="img/archerfish.jpg" alt="Children playing with a toy fish turret" width="100%">
-                    <h3><b>Archerfish Play Experience</b></h3>
-                    <p>A play experience based on the archerfish, designed for and tested by 4th graders</p>
+                    <a href="https://youtu.be/htyFc_vHnVc">
+                        <img src="img/ode.png" alt="Annabelle with arm and leg extended" width="100%">
+                        <h3><b>Olin Dance Ensemble</b></h3>
+                    </a>
+                    <p>The first (virtual) performance of Olin Dance Ensemble, founded and choreographed by me.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 top-buffer contactSocial">
+                    <h2><span>Contact Me</span></h2><br>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-4">
+                    <img src="img/email.png" alt="Email icon" height="64px"><br>
+                    <br><h3><b>aplatt (at) olin.edu</b></h3>
+                </div>
+                <div class="col-4">
+                    <a href="https://www.linkedin.com/in/annabelle-platt-92b4a0178/">
+                        <img src="img/linkedin.png" alt="LinkedIn logo"><br>
+                        <br><h3><b>LinkedIn</b></h3>
+                    </a>
+                </div>
+                <div class="col-4">
+                    <a href="https://github.com/19platta">
+                        <img src="img/github.png" alt="Github logo"><br>
+                        <br><h3><b>Github</b></h3>
+                    </a>
                 </div>
             </div>
         </div>
