Add line-following robot and adjust contaxt section padding for Chrome

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
     </header>
     <div class="background-spline">
-        <svg width="100%" height="auto" viewBox="0 0 1440 987" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg width="100vw" height="auto" viewBox="0 0 1440 987" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_11:14)">
                 <path d="M1 74.5C56 379 90 533 825 533C1196 533 1354 667 1440 807" stroke="black" stroke-width="2"/>
                 <path d="M81.5 74C95.5 368 162 536 898 536C1286 536 1352 603 1446 701" stroke="black" stroke-width="2"/>
@@ -34,7 +34,7 @@
             </defs>
         </svg>
         <section style="height: 620px"></section>
-        <svg width="100%" height="auto" viewBox="0 0 1440 965" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg width="100vw" height="auto" viewBox="0 0 1440 965" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_16:31)">
                 <path d="M-2 761C88 549 158 419 825 432C1195.93 439.23 1354 298 1440 158" stroke="black" stroke-width="3"/>
                 <path d="M-2 891C102 585 202 429 898 429C1286 429 1352 362 1446 264" stroke="black" stroke-width="3"/>
@@ -47,7 +47,7 @@
             </defs>
         </svg>
         <section style="height: 0"></section>
-        <svg width="100%" height="auto" viewBox="0 0 1440 987" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg width="100vw" height="auto" viewBox="0 0 1440 987" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_22:2)">
                 <path d="M-4 203C48 329 90 533 825 533C1196 533 1354 667 1440 807" stroke="black" stroke-width="3"/>
                 <path d="M2 33C28 275 154 536 898 536C1286 536 1352 603 1446 701" stroke="black" stroke-width="3"/>
@@ -171,8 +171,16 @@
                         <img src="img/misguided.png" alt="A pixel art book with the word Misguided over it" width="100%">
                         <h3 class="top-buffer"><b>Misguided: The Game</b></h3>
                     </a>
-                    <p>An interactive, story-based game, built from scratch in Python.</p>
+                    <p class="bottom-buffer">An interactive, story-based game, built from scratch in Python.</p>
+
+                    <a href="https://youtu.be/htyFc_vHnVc">
+                        <img src="img/ode.png" alt="Annabelle with arm and leg extended" width="100%">
+                        <h3><b>Olin Dance Ensemble</b></h3>
+                    </a>
+                    <p>The first (virtual) performance of Olin Dance Ensemble, founded and choreographed by me.</p>
+
                 </div>
+
                 <div class="col-4 project-pic">
                     <a href="docs/QEA%20Project%201%20Report.pdf">
                         <img src="img/calanus.jpg" alt="Calanus finmarchicus" width="100%">
@@ -181,12 +189,13 @@
                     <p>An algorithm that uses PCA to identify plankton species.
                     </p>
                 </div>
+
                 <div class="col-4 project-pic">
-                    <a href="https://youtu.be/htyFc_vHnVc">
-                        <img src="img/ode.png" alt="Annabelle with arm and leg extended" width="100%">
-                        <h3><b>Olin Dance Ensemble</b></h3>
+                    <a href="https://youtu.be/VqiU7-0uunQ">
+                        <img src="img/linerobot.jpg" alt="A small robot frame" width="100%">
+                        <h3 class="top-buffer"><b>Line-Following Robot</b></h3>
                     </a>
-                    <p>The first (virtual) performance of Olin Dance Ensemble, founded and choreographed by me.</p>
+                    <p>A line-following robot built using reflectivity sensors and proportional-derivative control.</p>
                 </div>
             </div>
         </div>
