Fix background width problems to avoid scrollbar

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <li><a href="https://www.linkedin.com/in/annabelle-platt-92b4a0178/">LinkedIn</a></li>
         </ul>
     </header>
-    <div class="background-spline">
-        <svg width="100vw" height="auto" viewBox="0 0 1440 987" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <div class="background">
+        <svg viewBox="0 0 1440 987" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_11:14)">
                 <path d="M1 74.5C56 379 90 533 825 533C1196 533 1354 667 1440 807" stroke="black" stroke-width="2"/>
                 <path d="M81.5 74C95.5 368 162 536 898 536C1286 536 1352 603 1446 701" stroke="black" stroke-width="2"/>
@@ -34,7 +34,7 @@
             </defs>
         </svg>
         <section style="height: 620px"></section>
-        <svg width="100vw" height="auto" viewBox="0 0 1440 965" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg height="auto" viewBox="0 0 1440 965" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_16:31)">
                 <path d="M-2 761C88 549 158 419 825 432C1195.93 439.23 1354 298 1440 158" stroke="black" stroke-width="3"/>
                 <path d="M-2 891C102 585 202 429 898 429C1286 429 1352 362 1446 264" stroke="black" stroke-width="3"/>
@@ -47,7 +47,7 @@
             </defs>
         </svg>
         <section style="height: 0"></section>
-        <svg width="100vw" height="auto" viewBox="0 0 1440 987" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg height="auto" viewBox="0 0 1440 987" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_22:2)">
                 <path d="M-4 203C48 329 90 533 825 533C1196 533 1354 667 1440 807" stroke="black" stroke-width="3"/>
                 <path d="M2 33C28 275 154 536 898 536C1286 536 1352 603 1446 701" stroke="black" stroke-width="3"/>
@@ -62,8 +62,8 @@
         <footer>
             <p>Website designed and built by Annabelle Platt, &copy 2021</p>
         </footer>
-
     </div>
+
     <section class="banner" style="padding-top: 140px">
         <div class="pic">
             <img src="img/Mask%20Group.png" alt="Annabelle Platt" style="float:right;width:100%;height:auto;">
